修改security 示例