@@ -5,20 +5,16 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.config.BeanIds;
-import org.springframework.security.config.Customizer;
-import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.builders.WebSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.AuthenticationEntryPoint;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.access.AccessDeniedHandler;
 import org.springframework.security.web.authentication.AuthenticationFailureHandler;
 import org.springframework.security.web.authentication.AuthenticationSuccessHandler;
@@ -28,6 +24,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 /**
  * security配置
@@ -39,9 +36,7 @@ import java.util.Arrays;
 @Configuration
 @EnableWebSecurity
 @EnableGlobalMethodSecurity(prePostEnabled = true, securedEnabled = true, jsr250Enabled = true)
-public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
-	@Autowired
-	private UserDetailsService userDetailsService;
+public class WebSecurityConfig {
 	@Autowired
 	private JwtAuthorizationFilter jwtAuthorizationFilter;
 	@Autowired
@@ -65,53 +60,45 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 	}
 	
 	/**
-	 * 授权中心管理器，解决依赖注入问题
+	 * 获取AuthenticationManager（认证管理器），登录时认证使用
 	 *
+	 * @param authenticationConfiguration
 	 * @return
 	 * @throws Exception
 	 */
-	@Bean(BeanIds.AUTHENTICATION_MANAGER)
-	@Override
-	public AuthenticationManager authenticationManagerBean() throws Exception {
-		return super.authenticationManagerBean();
+	@Bean
+	public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
+		return authenticationConfiguration.getAuthenticationManager();
 	}
 	
-	@Override
-	protected void configure(AuthenticationManagerBuilder auth) throws Exception {
-		auth.userDetailsService(userDetailsService)
-				.passwordEncoder(passwordEncoder());
-	}
-	
-	/**
-	 * 配置静态资源拦截问题
-	 *
-	 * @param web
-	 * @throws Exception
-	 */
-	@Override
-	public void configure(WebSecurity web) throws Exception {
-		web.ignoring()
-				.antMatchers("/favicon.ico",
-						"/error",
-						"/static/**",
-						"/webjars/**",
-						"/css/**",
-						"/js/**",
-						"/fonts/**");
-	}
-	
-	@Override
-	protected void configure(HttpSecurity http) throws Exception {
-		http.csrf(AbstractHttpConfigurer::disable)
-				.authorizeRequests(authorizeRequests -> {
-					authorizeRequests.anyRequest()
-							.authenticated();
-				})
+	@Bean
+	SecurityFilterChain web(HttpSecurity http) throws Exception {
+		http
+				.cors(AbstractHttpConfigurer::disable)
+				.authorizeHttpRequests((authorize) ->
+						authorize.mvcMatchers("/favicon.ico",
+										"/error",
+										"/static/**",
+										"/webjars/**",
+										"/css/**",
+										"/js/**",
+										"/fonts/**"
+								)
+								.permitAll()
+								.anyRequest()
+								.authenticated()
+				)
 				.formLogin(formLogin -> {
 					formLogin.loginPage("/login")
 							.permitAll()
 							.successHandler(authenticationSuccessHandler)
 							.failureHandler(authenticationFailureHandler);
+				})
+				.logout(logout -> {
+					logout.invalidateHttpSession(true)
+							.clearAuthentication(true)
+							.deleteCookies("JSESSIONID")
+							.logoutSuccessUrl("/login");
 				})
 				.sessionManagement(sessionManagement -> {
 					sessionManagement.sessionCreationPolicy(SessionCreationPolicy.STATELESS);
@@ -124,20 +111,22 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
 					cors.configurationSource(corsConfigurationSource());
 				})
 				// 添加自定义过滤器
-				.addFilterAfter(jwtAuthorizationFilter, UsernamePasswordAuthenticationFilter.class)
-				.httpBasic(Customizer.withDefaults());
+				.addFilterAfter(jwtAuthorizationFilter, UsernamePasswordAuthenticationFilter.class);
+		
+		return http.build();
 	}
 	
 	/**
 	 * 设置跨域
+	 *
 	 * @return
 	 */
 	@Bean
 	CorsConfigurationSource corsConfigurationSource() {
 		CorsConfiguration configuration = new CorsConfiguration();
-		configuration.setAllowedOrigins(Arrays.asList("*"));
+		configuration.setAllowedOrigins(List.of("*"));
 		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "HEAD", "PUT", "DELETE", "OPTION"));
-		configuration.setAllowedHeaders(Arrays.asList("*"));
+		configuration.setAllowedHeaders(List.of("*"));
 		configuration.addExposedHeader("Authorization");
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/**", configuration);
